# bird-python

./: README.md  pyproject.toml
bird-python/: base.py  client.py  http_client.py
bird_python/: __init__.py  client.py  exceptions.py  http_client.py
