[tool.poetry]
name = "bird-python"
version = "0.1.1"
description = "API wrapper for MessageBird written in Python"
authors = ["Miguel Alejandro Cepeda <alejomjc2011@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bird-python"}]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
